# Multi-Lang-Windows-Tools

./: README.md
DuplicateFinder/c/: DuplicateFinder.c
LargestFiles/c/: LargestFiles.c  README.md
LargestFiles/cpp/: LargestFiles.cpp  README.md
LargestFiles/csharp/: LargestFiles.cs  LargestFiles.csproj  README.md
LargestFiles/d/: LargestFiles.d  README.md
LargestFiles/fsharp/: LargestFiles.fsproj  Program.fs  README.md
LargestFiles/go/: LargestFIles.go  README.md
LargestFiles/node.js/: LargestFiles.js  README.md
LargestFiles/perl/: LargestFiles.pl  README.md
LargestFiles/python/: LargestFiles.py
LargestFiles/rust/: Cargo.toml  README.md
LargestFiles/rust/src/: main.rs
NetworkSnapshot/python/: NetworkSnapshot.py
SystemInfo/cpp/: README.md  SystemInfo.cpp
SystemInfo/csharp/: Program.cs  SystemInfo.csproj
SystemInfo/rust/: Cargo.toml
SystemInfo/rust/src/: Main.rs
