[package]
name = "LargestFiles"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-sys = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_SystemInformation",  # Added for GetTickCount
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
] }